<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_beranda"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/navberanda"
        android:enabled="true"
        app:showAsAction="always"/>

    <item
        android:id="@+id/navigation_berita"
        android:icon="@drawable/news"
        android:title="@string/navberita"
        android:enabled="true"
        app:showAsAction="ifRoom"
        android:checked="true"/>

    <item
        android:id="@+id/navigation_cari"
        android:icon="@drawable/cari"
        android:title="@string/navcari"
        android:enabled="true"
        app:showAsAction="always"/>
    <item
        android:id="@+id/navigation_pengadaan"
        android:icon="@drawable/pengadaan"
        android:title="@string/navpengadaan"
        android:enabled="true"/>

    <item
        android:id="@+id/navigation_statistik"
        android:icon="@drawable/statisk"
        android:title="@string/navstatistik" />


</menu>
